<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FormFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey"
            android:elevation="0dp"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/form_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FORM_APPBAR_TITLE"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_titulo"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="E-mail"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/tv_titulo"
                android:inputType="text"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_descricao"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="E-mail"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/tv_descricao"
                android:inputType="text"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_endereco"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="E-mail"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/tv_endereco"
                android:inputType="text"
                android:padding="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/tv_data"
                    android:textColor="@color/blue_grey"
                    app:backgroundTint="@color/white"
                    app:icon="@drawable/ic_calendar"
                    app:iconGravity="textStart"
                    app:iconTint="@color/blue_grey" />

                <TextView
                    android:id="@+id/tv_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/tv_selecione_uma_data"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_status"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_task_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_fazer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/tv_a_fazer"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_andamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:buttonTint="@color/white"
                    android:text="@string/tv_pendente"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_concluido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/tv_concluido"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/bt_salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:text="@string/bt_salvar"
                android:textColor="@color/blue_grey"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_check"
                app:iconGravity="textStart"
                app:iconTint="@color/blue_grey" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>