<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="Titulo" />

                <ImageButton
                    android:id="@+id/bt_editar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_edit"
                    android:backgroundTint="@color/blue"
                    android:contentDescription="@string/bt_editar" />

                <ImageButton
                    android:id="@+id/bt_deletar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/ic_delete"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/bt_deletar" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="18sp"
                tools:text="Descrição" />

            <TextView
                android:id="@+id/tv_end_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="18sp"
                tools:text="Endereço" />

            <TextView
                android:id="@+id/tv_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="18sp"
                tools:text="Data" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_voltar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_before"
                    android:backgroundTint="@color/blue_grey"
                    android:contentDescription="@string/bt_voltar" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <ImageButton
                    android:id="@+id/bt_proximo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_next"
                    android:backgroundTint="@color/blue_grey"
                    android:contentDescription="@string/bt_avancar" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>