<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ConvertFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey"
            android:elevation="0dp"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/form_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CONVERTER_MOEDA"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/DIGITE_AQUI_UM_VALOR"
            android:inputType="numberDecimal"
            android:textSize="26sp" />

        <RadioGroup
            android:id="@+id/rg_moeda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_dolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:checked="true"
                android:text="@string/DOLAR"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/EURO"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="converter"
            android:textColor="@color/blue_grey"
            app:cornerRadius="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="R$"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_swap"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:text="R$" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </LinearLayout>
</LinearLayout>